SERVER-48062 Index build abort should not be interrupted by stepdown